--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,13 @@
     "morgan": "~1.9.1"
   },
   "main": "app.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "^8.57.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-promise": "^6.1.1"
+  },
   "author": "",
   "license": "ISC",
   "description": ""
