--- a/backend/package.json
+++ b/backend/package.json
@@ -14,10 +14,12 @@
   "main": "app.js",
   "devDependencies": {
     "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-n": "^16.6.2",
-    "eslint-plugin-promise": "^6.1.1"
+    "eslint-plugin-promise": "^6.1.1",
+    "prettier": "^3.2.5"
   },
   "author": "",
   "license": "ISC",
