--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,7 @@
     "express": "~4.16.1",
     "morgan": "~1.9.1"
   },
-  "main": "app.js",
+  "main": "./bin/www",
   "devDependencies": {
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
