--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
     "express": "~4.16.1",
+    "mongoose": "^8.2.2",
     "morgan": "~1.9.1"
   },
   "main": "./bin/www",
