--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "express": "~4.16.1",
     "mongoose": "^8.2.2",
     "morgan": "~1.9.1",
+    "passport": "^0.7.0",
     "passport-jwt": "^4.0.1"
   },
   "main": "./bin/www",
