--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.30.1",
     "mongoose": "^8.2.2",
     "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1"
   },
