--- a/backend/.vscode/settings.json
+++ b/backend/.vscode/settings.json
@@ -1,1 +1,7 @@
-{ "editor.codeActionsOnSave": { "source.fixAll.eslint": "always" }, "eslint.validate": ["javascript"] }
+{
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": "always"
+  },
+  "eslint.validate": ["javascript"],
+  "cSpell.words": ["UNFOLLOW"]
+}
