--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@iconify/react": "^4.1.1",
     "react": "^18.2.0",
     "react-auth-kit": "^3.1.3",
     "react-dom": "^18.2.0",
