--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "@iconify/react": "^4.1.1",
+    "axios-hooks": "^5.0.2",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-auth-kit": "^3.1.3",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.22.3",
     "styled-components": "^6.1.8"
   },
