--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,13 +12,16 @@
   "dependencies": {
     "@iconify/react": "^4.1.1",
     "axios-hooks": "^5.0.2",
+    "formik": "^2.4.5",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-auth-kit": "^3.1.3",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.22.3",
-    "styled-components": "^6.1.8"
+    "react-spinners": "^0.13.8",
+    "styled-components": "^6.1.8",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
