--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth-kit/react-router": "^3.1.3",
     "@iconify/react": "^4.1.1",
     "axios-hooks": "^5.0.2",
     "formik": "^2.4.5",
