--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-auth-kit": "^3.1.3",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.22.3",
     "react-spinners": "^0.13.8",
