--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.0.3",
     "cookie-parser": "~1.4.4",
