--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.22.3",
     "react-spinners": "^0.13.8",
+    "react-tooltip": "^5.26.4",
     "styled-components": "^6.1.8",
     "yup": "^1.4.0"
   },
