--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-auth-kit": "^3.1.3",
+    "react-cookie": "^7.1.4",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-modal": "^3.16.1",
