dev: fly deployment prep

--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
   },
   "main": "./bin/www",
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.5.7",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
