--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-cookie": "^7.1.4",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-medium-image-zoom": "^5.2.4",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.22.3",
     "react-spinners": "^0.13.8",
